[gd_scene load_steps=32 format=3 uid="uid://ch5oexgqufye"]

[ext_resource type="Script" uid="uid://10rwi60qij4g" path="res://scripts/piggeon.gd" id="1_vqpnj"]
[ext_resource type="Texture2D" uid="uid://cmbg6mypnnwyl" path="res://assets/pigeon.png" id="2_0doqc"]
[ext_resource type="Texture2D" uid="uid://3o14mck2ega3" path="res://assets/exclamation_point.png" id="3_0doqc"]
[ext_resource type="Texture2D" uid="uid://c70f8lyboa7fe" path="res://assets/golden_pigeon.png" id="4_1qlm5"]
[ext_resource type="Texture2D" uid="uid://b5kf24jmxu15t" path="res://assets/feather_particle.png" id="4_i0kad"]
[ext_resource type="Texture2D" uid="uid://cwq8hnb3tj4nq" path="res://assets/cream_pigeon.png" id="5_cj7ct"]
[ext_resource type="Texture2D" uid="uid://cdtd2tdfyx2yf" path="res://assets/orange_pigeon.png" id="6_dvbny"]
[ext_resource type="Texture2D" uid="uid://g34ydxeao8j4" path="res://assets/shiny_pigeon.png" id="7_14xdm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0kad"]
size = Vector2(8, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_tvnrm"]
radius = 63.0317

[sub_resource type="AtlasTexture" id="AtlasTexture_qx3vw"]
atlas = ExtResource("2_0doqc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y11e"]
atlas = ExtResource("2_0doqc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp2nn"]
atlas = ExtResource("2_0doqc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_37jx2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx3vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y11e")
}],
"loop": true,
"name": &"flee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp2nn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hq2ed"]
atlas = ExtResource("4_1qlm5")
region = Rect2(0, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d47kj"]
atlas = ExtResource("4_1qlm5")
region = Rect2(37, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2so0f"]
atlas = ExtResource("4_1qlm5")
region = Rect2(0, 0, 37, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_wna8k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq2ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d47kj")
}],
"loop": true,
"name": &"flee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2so0f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nh006"]
atlas = ExtResource("5_cj7ct")
region = Rect2(0, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_i171v"]
atlas = ExtResource("5_cj7ct")
region = Rect2(37, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyd6"]
atlas = ExtResource("5_cj7ct")
region = Rect2(0, 0, 37, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_krsa5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh006")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i171v")
}],
"loop": true,
"name": &"flee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyd6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ehcfj"]
atlas = ExtResource("6_dvbny")
region = Rect2(0, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7j1k"]
atlas = ExtResource("6_dvbny")
region = Rect2(37, 72, 37, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytn6j"]
atlas = ExtResource("6_dvbny")
region = Rect2(0, 0, 37, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1ulb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehcfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7j1k")
}],
"loop": true,
"name": &"flee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytn6j")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a0upf"]
atlas = ExtResource("7_14xdm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myym7"]
atlas = ExtResource("7_14xdm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dl4"]
atlas = ExtResource("7_14xdm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5fvrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0upf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myym7")
}],
"loop": true,
"name": &"flee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1dl4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tvnrm"]
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
radial_velocity_min = -348.84
radial_velocity_max = 240.3
gravity = Vector3(10, 98, 0)
linear_accel_min = -20.16
linear_accel_max = 26.36
damping_max = 100.0
turbulence_enabled = true

[node name="Pigeon" type="CharacterBody2D"]
script = ExtResource("1_vqpnj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -31)
texture = ExtResource("3_0doqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_i0kad")
disabled = true

[node name="DetectionRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(3, -15)
shape = SubResource("CircleShape2D_tvnrm")

[node name="Normal" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_37jx2")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Golden" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1.5, -14)
sprite_frames = SubResource("SpriteFrames_wna8k")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Cream" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1.5, -14)
sprite_frames = SubResource("SpriteFrames_krsa5")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Orange" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1.5, -14)
sprite_frames = SubResource("SpriteFrames_c1ulb")
animation = &"flee"
autoplay = "idle"
flip_h = true

[node name="Shiny" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_5fvrk")
animation = &"flee"
autoplay = "idle"
flip_h = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 2)
emitting = false
amount = 5
sub_emitter = NodePath(".")
texture = ExtResource("4_i0kad")
lifetime = 0.3
interp_to_end = 1.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_tvnrm")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
